--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>SURYA777 : Daftar Slot Online Resmi & Situs Slot Gacor Hari Gampang Menang</title>
     <meta name="description" content="Surya777 adalah situs slot gacor gampang maxwin dengan rtp slot gacor tertinggi di kenal sebagai link situs slot online terlengkap gampang menang." />
     <meta name="google-site-verification" content="XdAk3VerQWctMsX_j7BAbRkMc7cALKTUJ5YzZ6HeTZo" />
-    <link rel="amphtml" href="https://ruangmaxwin.top/folder/surya777/">
+    <link rel="amphtml" href="https://ruangmaxwin.top/folder/surya777hit/">
     <link rel="canonical" href="http://surya777.hit.katuma.org/"><link rel="icon" type="image/png" href="https://ik.imagekit.io/rbsfqc2bf/images.jpg?updatedAt=1703554301815"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       SURYA777 : Daftar Slot Online Resmi & Situs Slot Gacor Hari Gampang Menang
 </title>
